# rustboy-color

./: .gitignore  Cargo.toml  LICENSE  PokemonCristal.gbc  README.md  cli.yaml
src/: cartrigbe.rs  configuration.rs  cpu.rs  instruction.rs  io.rs  main.rs  memory.rs  opcode.rs  utils.rs
src/cartridge/: cartridge.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  metadata.rs  mod.rs  rom.rs
src/cpu/: cpu.rs  instruction.rs  mod.rs  register.rs
src/soc/: cpu.rs  instruction.rs  mod.rs  register.rs
src/tests/: cpu_test.rs
