[package]
name = "rustboy_color"
version = "0.1.0"
authors = ["pdoro <pablo.doro92@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
fern = { version = "0.5.9", features = ["colored"] }
chrono = "0.4.10"
phf = { version = "0.7.24", features = ["macros"] }
clap = "3.0.0-beta.1"
color-eyre = "0.5"

#amethyst = "0.13.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

